poc/tests/errors/test_FplVariableAlreadyDeclared_class_11.fpl
Test.Namespace
{
    theory
    {
        class Nat: obj
        {
            x: Nat

            optional func TestProperty() -> Nat
            {
                x: Int
                return x
            }
        }
    }
}

##############################

FplVariableAlreadyDeclared:11:17: The name 'x' was already declared in the current context at (7,13)